--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "youtube-clone-project",
+  "name": "try-react-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^1.2.1",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
